# ML-Agents-Hummingbirds

./: README.md
HummingBirds/: .gitignore
HummingBirds/Assets/Hummingbird/NNModels/: Hummingbird.onnx  Hummingbird_v2.onnx
HummingBirds/Assets/Hummingbird/Prefabs/: FloatingIsland.prefab  FlowerBud.prefab  Hummingbird.prefab
HummingBirds/Assets/Hummingbird/Scenes/: FlowerIsland.unity  Training.unity
HummingBirds/Assets/Hummingbird/Scenes/FlowerIsland/: LightingData.asset
HummingBirds/Assets/Hummingbird/Scenes/Training/: LightingData.asset
HummingBirds/Assets/Hummingbird/Scripts/: Flower.cs  FlowerArea.cs  GameManager.cs  HummingBirdAgent.cs
HummingBirds/Assets/ML-Agents/Timers/: FlowerIsland_timers.json  Training_timers.json
HummingBirds/ProjectSettings/: ProjectSettings.asset
ml_agents/: README.md  pyproject.toml  trainer_config.yaml
