[tool.poetry]
name = "ml-agents"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ml_agents"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.10.8"
mlagents = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
